# ChangeLog for net-irc/unrealircd
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/ChangeLog,v 1.68 2007/12/22 18:18:33 ulm Exp $

  22 Dec 2007; Ulrich Mueller <ulm@gentoo.org> -unrealircd-3.2.7.ebuild:
  Remove old revision wrt bug #201682.

  22 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  unrealircd-3.2.7-r2.ebuild:
  ppc stable, bug #201682

  12 Dec 2007; Raúl Porcel <armin76@gentoo.org> unrealircd-3.2.7-r2.ebuild:
  sparc/x86 stable wrt #201682

*unrealircd-3.2.7-r2 (12 Dec 2007)

  12 Dec 2007; Ulrich Mueller <ulm@gentoo.org> -unrealircd-3.2.7-r1.ebuild,
  +unrealircd-3.2.7-r2.ebuild:
  Set correct owner for the installed certificates, fixes bug #201996.
  Thanks to Attila Tóth <atoth@atoth.sote.hu> and Stefan Becker
  <stefan.becker@ip-exchange.de> for reporting and providing a patch.

  10 Dec 2007; Raúl Porcel <armin76@gentoo.org> unrealircd-3.2.7-r1.ebuild:
  sparc/x86 stable wrt #201682

  08 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  -unrealircd-3.2.6-r1.ebuild:
  old

  06 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  unrealircd-3.2.7.ebuild:
  ppc stable, bug #193233

  25 Sep 2007; Raúl Porcel <armin76@gentoo.org> unrealircd-3.2.7.ebuild:
  sparc stable wrt #193233

  20 Sep 2007; Raúl Porcel <armin76@gentoo.org> unrealircd-3.2.7.ebuild:
  x86 stable wrt #193233

*unrealircd-3.2.7 (20 Aug 2007)

  20 Aug 2007; Markus Ullmann <jokey@gentoo.org> +unrealircd-3.2.7.ebuild:
  Version bump wrt notify in bug #189199

  20 Aug 2007; Markus Ullmann <jokey@gentoo.org> unrealircd-3.2.6-r1.ebuild:
  Fix SRC_URI

*unrealircd-3.2.6-r1 (14 May 2007)

  14 May 2007; Markus Ullmann <jokey@gentoo.org> -unrealircd-3.2.6.ebuild,
  +unrealircd-3.2.6-r1.ebuild:
  revbump for new useflag to support displaying channel modes during compilation

  06 May 2007; Marius Mauch <genone@gentoo.org> unrealircd-3.2.6.ebuild:
  Replacing einfo with elog
