@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/Attic/unrealircd-3.2.7-r2.ebuild,v 1.3 2007/12/22 16:07:53 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/Attic/unrealircd-3.2.7-r2.ebuild,v 1.4 2008/08/11 21:31:36 ricmm Exp $
 
 inherit eutils ssl-cert versionator multilib
 
@@ -14,7 +14,7 @@ SRC_URI="http://unreal.brueggisite.de/${MY_P}.tar.gz
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~amd64 ppc sparc x86 ~x86-fbsd"
+KEYWORDS="~amd64 ~mips ppc sparc x86 ~x86-fbsd"
 IUSE="hub ipv6 ssl zlib curl prefixaq showlistmodes"
 
 RDEPEND="ssl? ( dev-libs/openssl )
